--- a/mmaps.css
+++ b/mmaps.css
@@ -1,8 +1,48 @@
 html, body {
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
-#map {
+div.close {
+  text-align: center;
+  display: block:
+  width: 100%;
+  font-weight: bold;
+  padding-top: 40px;
+  cursor: pointer;
+}
+div.close span {
+  background: #c0c0c0;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 5px;
+}
+div.event-lightbox {
+  text-align: center;
+  border: 20px solid #50f050;
+  border-radius: 20px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+a {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
+div#container {
+  background: black;
+  position: relative;
+  width: 100%;
   height: 100%;
+  text-align: center;
+  vertical-align: middle;
+}
+
+div#inner {
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%,-50%);
+  width: 900px;
+  height: 500px;
 }
