Tweak popup box

--- a/mmaps.css
+++ b/mmaps.css
@@ -20,8 +20,8 @@ div.close span {
 }
 div.event-lightbox {
   text-align: center;
-  border: 20px solid #50f050;
-  border-radius: 20px;
+  border: 15px solid #f02020;
+  border-radius: 25px;
   padding-top: 50px;
   padding-bottom: 50px;
 }
