--- a/mmaps.css
+++ b/mmaps.css
@@ -4,29 +4,22 @@ html, body {
   margin: 0;
   padding: 0;
 }
-div.close {
-  text-align: center;
-  display: block:
-  width: 100%;
-  font-weight: bold;
-  padding-top: 40px;
-  cursor: pointer;
-}
-div.close span {
-  background: #c0c0c0;
-  border: 1px solid black;
-  padding: 10px;
-  border-radius: 5px;
-}
 div.event-lightbox {
+  color: white;
   text-align: center;
-  border: 15px solid #f02020;
+  background: #202020;
+  display: block;
+  width: 300px;
+  height: 20px;
+  border: 0px solid black;
+  opacity: 0.5;
   border-radius: 25px;
-  padding-top: 50px;
+  padding: 10px;
   padding-bottom: 50px;
+  font-family: arial, sans-serif;
 }
 a {
-  color: black;
+  color: white;
   text-decoration: none;
   font-weight: bold;
 }
