--- a/mmaps.css
+++ b/mmaps.css
@@ -10,19 +10,29 @@ div.event-lightbox {
   background: #202020;
   display: block;
   width: 300px;
-  height: 20px;
+  height: 80px;
   border: 0px solid black;
   opacity: 0.5;
   border-radius: 25px;
   padding: 10px;
-  padding-bottom: 50px;
   font-family: arial, sans-serif;
+}
+div.event-lightbox div {
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%,-50%);
+  width: 280px;
+}
+div.event-lightbox div span {
+  display: block;
+  padding-top: 10px;
 }
 a {
   color: white;
   text-decoration: none;
   font-weight: bold;
 }
+
 div#container {
   background: black;
   position: relative;
@@ -31,7 +41,6 @@ div#container {
   text-align: center;
   vertical-align: middle;
 }
-
 div#inner {
   position: absolute;
   top: 50%; left: 50%;
