--- a/mmaps.css
+++ b/mmaps.css
@@ -69,6 +69,8 @@ div.event-lightbox img {
   height: 150px;
   overflow: hidden;
   border-radius: 50%;
+  border: 3px solid black;
+  background-clip: padding-box;
 }
 .circular img {
   width: auto;
